@@ -28,6 +28,9 @@ class MediaModelManager extends JModel
 			$folder = JRequest::getVar('folder', '', '', 'path');
 			$this->setState('folder', $folder);
 
+			$fieldid = JRequest::getVar('fieldid', '');
+			$this->setState('field.id', $fieldid);
+
 			$parent = str_replace("\\", "/", dirname($folder));
 			$parent = ($parent == '.') ? null : $parent;
 			$this->setState('parent', $parent);
