@@ -19,6 +19,7 @@ defined('JPATH_BASE') or die;
 abstract class JFactory
 {
 	public static $application = null;
+	public static $cache = null;
 	public static $config = null;
 	public static $session = null;
 	public static $language = null;
@@ -171,10 +172,14 @@ abstract class JFactory
 	 */
 	public static function getCache($group = '', $handler = 'callback', $storage = null)
 	{
+		$hash = md5($group.$handler.$storage);
+		if(isset(JFactory::$cache[$hash]))
+		{
+			return JFactory::$cache[$hash];
+		}
 		$handler = ($handler == 'function') ? 'callback' : $handler;
 
 		$conf = &JFactory::getConfig();
-
 
 		$options = array('defaultgroup'	=> $group );
 
@@ -186,7 +191,9 @@ abstract class JFactory
 
 		$cache = &JCache::getInstance($handler, $options);
 		$cache->setCaching($conf->get('caching'));
-		return $cache;
+		
+		JFactory::$cache[$hash] = $cache;
+		return JFactory::$cache[$hash];
 	}
 
 	/**
@@ -465,7 +472,7 @@ abstract class JFactory
 		require_once $file;
 
 		// Create the registry with a default namespace of config
-		$registry = new JRegistry('config');
+		$registry = new JRegistry();
 
 		// Create the JConfig object
 		$config = new JFrameworkConfig();
